# gtk-example

./: .gitignore  CMakeLists.txt  README.md  global.cpp  global.h  gui.cpp  gui.h  main.cpp  worker.cpp  worker.h
